--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mayank",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
