--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors-anywhere": "^0.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2"
   }
