--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors-anywhere": "^0.4.4",
+    "cross": "^1.0.0",
     "express": "^4.18.2",
     "mongoose": "^8.1.2"
   }
